# ABN_AMRO

./: .gitignore  README.md  exercise.py  helper.py  pyproject.toml  requirements.txt  test_exercise.py
.github/workflows/: build.yml  test.yml
src/ABN_AMRO_exercise/: helper.py
test/: test_exercise.py
