[project]
name = "ABN_AMRO_exercise"
version = "0.0.1"
authors = [
  { name="Richard Middelkoop", email="richard.middelkoop@harvest.nl" },
]
description = "A package for a coding exercise provided by ABN AMRO"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: ubuntu-latest",
]

[project.urls]
Homepage = "https://github.com/RichardMiddelkoop/ABN_AMRO"